added link to intro

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,10 @@
   BIBCAT is an open-source middleware technology for managing BIBFRAME RDF data and is sponsored and supported by
   <a href="http://knowledgelinks.io/">KnowledgeLinks.io</a>. BIBCAT typically is part of a
   larger digital library or catalog project. The source code repository is hosted on Github at 
-  <a href="https://github.com/KnowledgeLinks/rdfw-bibcat">https://github.com/KnowledgeLinks/rdfw-bibcat</a> 
+  <a href="https://github.com/KnowledgeLinks/rdfw-bibcat">https://github.com/KnowledgeLinks/rdfw-bibcat</a>. An <a href="/introduction">introduction</a>
+to bibcat provides an overview on installing, basic functionality, and
+how RDF Mapping Language (rml) is used for input/output of data into 
+a triplestore. 
 </p>
 <div class="row">
   <div class="col-md-4">
